--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     - The freeCodeCamp Team
   -->
 
-  <p class="paragraph">Hello World, we are software developers!</p>
+  <p class="paragraph">Hello World, we are software developers!!</p>
 
   <div id="main">
     <h1 id="title">Dr. Norman Borlaug</h1>
